--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
   "author": "Tomas <szemzotomas@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "@healy-tp/common": "^1.0.16",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "helmet": "^5.1.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.21.1",
