--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@healy-tp/common": "^1.0.16",
     "amqplib": "^0.10.2",
     "body-parser": "^1.20.0",
+    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
