--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.18.1",
     "helmet": "^5.1.0",
     "lodash": "^4.17.21",
+    "luxon": "^3.0.3",
     "moment": "^2.29.4",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
