--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "IS_TEST=true mocha \"./src/**/*.test.js\"",
+    "test": "IS_TEST=true nyc mocha \"./src/**/*.test.js\"",
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
     "migrate": "npx sequelize-cli db:migrate",
@@ -41,6 +41,7 @@
     "eslint-plugin-import": "^2.26.0",
     "mocha": "^10.1.0",
     "nodemon": "^1.3.3",
+    "nyc": "^15.1.0",
     "sequelize-cli": "^6.4.1",
     "sinon": "^14.0.2"
   }
