--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -2,18 +2,13 @@ name: Deploy Appointments service
 on:
   push:
     branches:
-      - feature/run-migrations
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      # - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-
-      # - run: docker build -t hernantain/healy-appointments .
-
-      # - run: docker push hernantain/healy-appointments
 
       - name: Generate deployment package
         run: zip -r deploy.zip . -x '*.git*'
