--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "IS_TEST=true nyc mocha \"./src/**/*.test.js\"",
+    "test": "IS_TEST=true nyc mocha \"./tests/**/*.test.js\"",
     "start": "node src/index.js",
     "dev": "nodemon --inspect=0.0.0.0:9229 src/index.js",
     "migrate": "npx sequelize-cli db:migrate",
