--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,8 +18,8 @@ jobs:
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
           aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
-          application_name: applications
-          environment_name: Applications-env
+          application_name: appointments
+          environment_name: Appointments-env
           existing_bucket_name: elasticbeanstalk-us-east-1-828797150105
           region: us-east-1
           version_label: ${{ github.sha }}
